Let the footer not react on pointer-events, except the legal link (this mainly fixes issues with protractor clicking on elements hidden by the footer)

--- a/alv-portal-ui/src/app/shared/layout/footer/footer.component.scss
+++ b/alv-portal-ui/src/app/shared/layout/footer/footer.component.scss
@@ -15,6 +15,7 @@
   z-index: $z-index-footer;
   background-color: $color-dark-grey;
   color: $color-white;
+  pointer-events: none;
 
   alv-version {
     margin: 0 1em;
@@ -23,6 +24,7 @@
   a {
     float: right;
     color: $color-white;
+    pointer-events: all;
   }
 }
 
